[package]
name = "letterman_dns"
version = "0.1.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

description = "this is a light weight grounds up email lib for rust."
homepage = "https://github.com/gzbakku/fdb/tree/master/postoffice"
repository = "https://github.com/gzbakku/fdb/tree/master/postoffice"
readme = "README.md"
keywords = ["smtp","server","client","smtps","esmtp"]
categories = ["web-programming::http-server", "web-programming::http-client", "api-bindings","web-programming::websocket"]
license-file = "License.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.1"
trust-dns-resolver = "0.20.3"
regex = "1.5.4"
# tokio = { version = "1.14.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["full"] }