[package]
name = "tokio_spf_validator"
version = "1.0.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

description = "this is a spf validation lib for smtp servers."
homepage = "https://github.com/gzbakku/tokio_spf_validator"
repository = "https://github.com/gzbakku/tokio_spf_validator"
readme = "README.md"
keywords = ["spf","async","tokio","validate","spf validation"]
categories = ["Email", "Parser implementations", "api-bindings","Asynchronous"]
license-file = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.1"
trust-dns-resolver = "0.20.3"
regex = "1.5.4"
# tokio = { version = "1.14.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["full"] }